--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ html {
     background-color: #444;
 }
 
+.form-button-delete {
+    background-color: #fff;
+}
+
 .form-button-delete:hover {
     background-color: rgb(214, 214, 214);
 }
